debugging image issue

--- a/web/_includes/layouts/post.njk
+++ b/web/_includes/layouts/post.njk
@@ -4,11 +4,12 @@ templateClass: tmpl-post
 ---
 <article>
   <h1>{{ post.title }}</h1>
-  
-  <!-- Using the new tag -->
-  <img src="{%  imageUrlFor imageObject, 900  %}" alt="{{ post.mainImage.alt }}">
-  
-  <p>Written by {% for author in post.authors %}{{author.name}}{% endfor %}  </p>
+  {{ imageObject | console }}
+  <p>
+  Written by {% for author in post.authors %}
+  <a href="/authors/{{ author.slug.current | slug }}/"> {{author.name}} </a>
+  {% endfor %}
+</p>
   {{ post.body | markdownify | safe }}
   <p><a href="{{ '/' | url }}">← Home</a></p>
 </article>
