trying to solve image issue

--- a/web/_includes/layouts/post.njk
+++ b/web/_includes/layouts/post.njk
@@ -4,7 +4,7 @@ templateClass: tmpl-post
 ---
 <article>
   <h1>{{ post.title }}</h1>
-  {{ imageObject | console }}
+  {{ imageObject | dump }}
   <p>
   Written by {% for author in post.authors %}
   <a href="/authors/{{ author.slug.current | slug }}/"> {{author.name}} </a>
